// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`GitHub API Client apiCalls should match fetchRepositories call 1`] = `
{
  "mutator": [Function],
  "requestOptions": {
    "headers": {
      "Accept": "application/vnd.github.v3+json",
      "Authorization": "Bearer test",
    },
  },
  "url": "https://api.github.com/users/carloscuesta/repos",
}
`;

exports[`GitHub API Client apiCalls should match fetchUserInformation call 1`] = `
{
  "mutator": [Function],
  "requestOptions": {
    "headers": {
      "Accept": "application/vnd.github.v3+json",
      "Authorization": "Bearer test",
    },
  },
  "url": "https://api.github.com/users/carloscuesta",
}
`;

exports[`GitHub API Client mutators transformRepositories should match the mutated repositories 1`] = `
[
  {
    "description": "An emoji guide for your commit messages. 😜 ",
    "language": "JavaScript",
    "name": "gitmoji",
    "stars": {
      "format": "7,323",
      "value": 7323,
    },
    "url": "https://github.com/carloscuesta/gitmoji",
  },
]
`;

exports[`GitHub API Client mutators transformUserInformation should match the mutated user information 1`] = `
{
  "followers": "970",
}
`;
